@@ -9,7 +9,7 @@
  * implied. See the License for the specific language governing
  * rights and limitations under the License.
  *
- * The Original Code is Content Registry 3
+ * The Original Code is Data Dictionary.
  *
  * The Initial Owner of the Original Code is European Environment
  * Agency. Portions created by TripleDev or Zero Technologies are Copyright
@@ -338,7 +338,7 @@ public class VocabularyFoldersActionBean extends AbstractActionBean {
         if (expand) {
             result.add(folderId);
         } else {
-            result.remove(new Integer(folderId));
+            result.remove(Integer.valueOf(folderId));
         }
 
         expanded = StringUtils.join(result, ",");
